--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,73 @@
 @import './common';
 @import './example';
+
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+}
+
+.top-wrapper {
+  margin: 20px; 
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+input {
+  height: 40px;  
+  padding: 5px;
+  font-size: 16px; 
+  border: 1px solid #ddd; 
+  border-radius: 5px; 
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+  margin: 20px;
+}
+
+.photo-card {
+  border: 1px solid #ddd;
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+  border-radius: 8px; 
+}
+
+.photo-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.photo-card:hover {
+  transform: scale(1.05);
+}
+
+.photo-card .details {
+  padding: 15px; 
+  background-color: #f9f9f9;
+  border-radius: 0 0 8px 8px; 
+}
+
+.photo-card .info {
+  margin: 8px 0; 
+}
+
+.submit,
+.load-more {
+  display: inline-block;
+  margin: 10px auto; 
+  padding: 10px;
+  background-color: lightcoral;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 16px;
+}
